# f24-telemetry-server

./: .gitignore  Cargo.toml
migrations/20180925172550_initial/: down.sql  up.sql
migrations/20180927185625_add_rpm/: down.sql  up.sql
migrations/20181004082748_more-fields/: down.sql  up.sql
migrations/20181004083949_forgot_voltage2/: down.sql  up.sql
migrations/20181004084229_ffs/: down.sql  up.sql
src/: main.rs  models.rs  pool.rs  proto.rs  schema.rs
