[package]
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]
name = "f24-telemetry-server"
version = "0.1.0"

[dependencies]
chrono = "0.4.6"
dotenv = "0.13.0"
failure = "0.1.2"
log = "0.4.5"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
rocket = "0.3.16"
rocket_codegen = "0.3.16"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.30"

[dependencies.diesel]
features = ["postgres", "chrono"]
version = "1.3.3"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
version = "0.3"
